# mango

./: paho-sub.py  phd.py  pyproject.toml  readme.md  requirements.txt  runtime.csv  setup.py
.github/workflows/: publish-mango.yml  test-mango.yml
examples/: rrule_event.py  simple_market.py
examples/distributed_clock/: clock_agent.py  clock_manager.py  serializer.py
mango/container/: external_coupling.py
mango/util/: distributed_clock.py  distributed_termination.py
tests/integration_tests/: test_single_container_termination.py
tests/unit_tests/role/: role_test.py
