[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mango-agents"
#version = "2.1.0-1"
dynamic = ["version"]
authors = [{name="mango Team", email="mango@offis.de"}, {name="Florian Maurer", email="fmaurer@disroot.org"}]
description = "Modular Python Agent Framework - Temporary Fork of mango for development purpose"
readme = "readme.md"
requires-python = ">=3.10"

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = {file="LICENSE"}
keywords = ["agent based simulation", "simulation"]

dependencies = [
    "paho-mqtt>=2.1.0",
    "python-dateutil>=2.9.0",
    "dill>=0.3.8",
    "protobuf==5.27.2",
    "networkx>=3.4.1"
]


[project.optional-dependencies]
fastjson = [
    "msgspec>=0.18.6"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit"
]

[project.urls]
Homepage = "https://mango-agents.readthedocs.io"
Repository = "https://github.com/OFFIS-DAI/mango"
Issues = "https://github.com/OFFIS-DAI/mango/issues"


[tool.pytest]
testpaths = "tests"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "mqtt",
]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.setuptools_scm]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "G", "I", "UP", "AIR", "PIE", "PLR1714", "PLW2901", "TRY201"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "I001", # allow unsorted imports in __init__.py
    "F401", # allow unused imports in __init__.py
]
"examples/*" = [
    "ARG",  # allow unused arguments
    "F841", # allow unused local variables
]
"tests/*" = [
    "ARG",  # allow unused arguments for pytest fixtures
    "E741", # allow reused variables
    "F841", # allow unused local variables
]
